--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   http:
   lottie: ^3.1.0
   url_launcher:
+  firebase_storage: ^11.7.4
+  file_picker: ^8.0.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
