--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   lottie: ^3.1.0
   url_launcher:
   firebase_storage: ^11.7.4
-  file_picker: ^8.0.3
+  image_picker: ^1.1.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
